add test registartion endps
