# resources/model_reg_simple.go
@@ -1,0 +1,158 @@
+/*
+Cifra SSO REST API
+
+SSO REST API for Cifra app
+
+API version: 0.0.1
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package resources
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the RegSimple type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &RegSimple{}
+
+// RegSimple struct for RegSimple
+type RegSimple struct {
+	Data RegSimpleData `json:"data"`
+}
+
+type _RegSimple RegSimple
+
+// NewRegSimple instantiates a new RegSimple object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewRegSimple(data RegSimpleData) *RegSimple {
+	this := RegSimple{}
+	this.Data = data
+	return &this
+}
+
+// NewRegSimpleWithDefaults instantiates a new RegSimple object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewRegSimpleWithDefaults() *RegSimple {
+	this := RegSimple{}
+	return &this
+}
+
+// GetData returns the Data field value
+func (o *RegSimple) GetData() RegSimpleData {
+	if o == nil {
+		var ret RegSimpleData
+		return ret
+	}
+
+	return o.Data
+}
+
+// GetDataOk returns a tuple with the Data field value
+// and a boolean to check if the value has been set.
+func (o *RegSimple) GetDataOk() (*RegSimpleData, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Data, true
+}
+
+// SetData sets field value
+func (o *RegSimple) SetData(v RegSimpleData) {
+	o.Data = v
+}
+
+func (o RegSimple) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o RegSimple) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["data"] = o.Data
+	return toSerialize, nil
+}
+
+func (o *RegSimple) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"data",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varRegSimple := _RegSimple{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varRegSimple)
+
+	if err != nil {
+		return err
+	}
+
+	*o = RegSimple(varRegSimple)
+
+	return err
+}
+
+type NullableRegSimple struct {
+	value *RegSimple
+	isSet bool
+}
+
+func (v NullableRegSimple) Get() *RegSimple {
+	return v.value
+}
+
+func (v *NullableRegSimple) Set(val *RegSimple) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableRegSimple) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableRegSimple) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableRegSimple(val *RegSimple) *NullableRegSimple {
+	return &NullableRegSimple{value: val, isSet: true}
+}
+
+func (v NullableRegSimple) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableRegSimple) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
