# resources/model_reg_simple_data.go
@@ -1,0 +1,186 @@
+/*
+Cifra SSO REST API
+
+SSO REST API for Cifra app
+
+API version: 0.0.1
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package resources
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the RegSimpleData type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &RegSimpleData{}
+
+// RegSimpleData struct for RegSimpleData
+type RegSimpleData struct {
+	Type string `json:"type"`
+	Attributes RegSimpleDataAttributes `json:"attributes"`
+}
+
+type _RegSimpleData RegSimpleData
+
+// NewRegSimpleData instantiates a new RegSimpleData object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewRegSimpleData(type_ string, attributes RegSimpleDataAttributes) *RegSimpleData {
+	this := RegSimpleData{}
+	this.Type = type_
+	this.Attributes = attributes
+	return &this
+}
+
+// NewRegSimpleDataWithDefaults instantiates a new RegSimpleData object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewRegSimpleDataWithDefaults() *RegSimpleData {
+	this := RegSimpleData{}
+	return &this
+}
+
+// GetType returns the Type field value
+func (o *RegSimpleData) GetType() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Type
+}
+
+// GetTypeOk returns a tuple with the Type field value
+// and a boolean to check if the value has been set.
+func (o *RegSimpleData) GetTypeOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Type, true
+}
+
+// SetType sets field value
+func (o *RegSimpleData) SetType(v string) {
+	o.Type = v
+}
+
+// GetAttributes returns the Attributes field value
+func (o *RegSimpleData) GetAttributes() RegSimpleDataAttributes {
+	if o == nil {
+		var ret RegSimpleDataAttributes
+		return ret
+	}
+
+	return o.Attributes
+}
+
+// GetAttributesOk returns a tuple with the Attributes field value
+// and a boolean to check if the value has been set.
+func (o *RegSimpleData) GetAttributesOk() (*RegSimpleDataAttributes, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Attributes, true
+}
+
+// SetAttributes sets field value
+func (o *RegSimpleData) SetAttributes(v RegSimpleDataAttributes) {
+	o.Attributes = v
+}
+
+func (o RegSimpleData) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o RegSimpleData) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["type"] = o.Type
+	toSerialize["attributes"] = o.Attributes
+	return toSerialize, nil
+}
+
+func (o *RegSimpleData) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"type",
+		"attributes",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varRegSimpleData := _RegSimpleData{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varRegSimpleData)
+
+	if err != nil {
+		return err
+	}
+
+	*o = RegSimpleData(varRegSimpleData)
+
+	return err
+}
+
+type NullableRegSimpleData struct {
+	value *RegSimpleData
+	isSet bool
+}
+
+func (v NullableRegSimpleData) Get() *RegSimpleData {
+	return v.value
+}
+
+func (v *NullableRegSimpleData) Set(val *RegSimpleData) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableRegSimpleData) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableRegSimpleData) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableRegSimpleData(val *RegSimpleData) *NullableRegSimpleData {
+	return &NullableRegSimpleData{value: val, isSet: true}
+}
+
+func (v NullableRegSimpleData) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableRegSimpleData) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
